Fix layout bug

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -5,7 +5,7 @@ body {
     background: #ffffff url("/repeating-vintage-paper-background.jpg") repeat;
     text-align: center;
     padding-top: 45px;
-    padding-bottom: 45px;
+    padding-bottom: 65px;
     clear: both;
 }
 #bodyContent span {
